# rabbitmq-template

./: .gitignore  pyproject.toml
pubsub-direct-exchange/: emi_logs.py  receiver_logs.py
pubsub-fanout-exchange/: emi_logs.py  receiver_logs_1.py
pubsub-routing/: receiver_logs_2.py
pubsub-topic-exchange/: emi_logs.py  receiver_logs.py
rpc/: rpc_client.py  rpc_server.py
work-queues-basic-publish/: recieve.py  send.py
work_queues/: recieve.py  send.py
