[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["dianamatkava <dianamatkava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
fastapi = "^0.110.3"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
